--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -62,12 +62,11 @@ filter section
 /*
     form
  */
-.create-todo-form {
+.todo-form {
     padding: 1rem 3rem;
-    text-align: right;
 }
 
-.create-todo-form input {
+.todo-form input {
     padding: 1rem 0;
     width: 100%;
     outline: 0;
@@ -76,29 +75,31 @@ filter section
     background: none;
 }
 
-.create-todo-form input:focus + label::after {
+.todo-form input:focus + label::after {
     width: 100%;
+    height: 0.25rem;
+    background-color: #0652dd;
     transition: 0.1s ease-in-out;
 }
 
-.create-todo-form label {
+.todo-form label {
     width: 100%;
     position: relative;
     margin: 0;
 }
 
-.create-todo-form label::after {
-    width: 0;
+.todo-form label::after {
+    width: 100%;
     content: '';
-    height: 0.25rem;
-    background-color: #0652dd;
-    position: absolute;
+    height: 0.05rem;
+    background-color: #dfe4ea;
     transition: 0.1s ease-in-out;
+    position: absolute;
     top: -1rem;
     left: 0;
 }
 
-.create-todo-form textarea {
+.todo-form textarea {
     padding: 1rem;
     width: 100%;
     height: 10rem;
@@ -108,16 +109,20 @@ filter section
     background: none;
 }
 
-.create-todo-form textarea:focus {
+.todo-form textarea:focus {
     border: 1px dashed #0652dd;
 }
 
-.create-todo-form textarea::placeholder,
-.create-todo-form input::placeholder {
+.todo-form textarea.error {
+    border: 1px dashed #dc3545;
+}
+
+.todo-form textarea::placeholder,
+.todo-form input::placeholder {
     opacity: 0.2;
 }
 
-.create-todo-form .btn {
+.todo-form .btn {
     background-color: #0652dd;
     padding: 0.7rem 2rem;
     margin-top: 0.5rem;
@@ -128,6 +133,11 @@ filter section
     padding: 1rem 3rem;
     border-bottom: 1px solid #dfe4ea;
     color: #0652dd;
+}
+
+.todo-form .input-error {
+    margin-top: -10px;
+    margin-bottom: 15px;
 }
 
 /*
